# feiq-lan-tool

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.codex-orchestrator/: status.md  tasks.json
docs/superpowers/plans/: 2026-04-15-file-delivery-upgrade.md  2026-04-15-file-transfer-runtime.md  2026-04-16-discovery-observability.md  2026-04-16-display-general-phase-1.md  2026-04-16-main-window-layout-and-settings-popup.md  2026-04-16-manual-segment-probing.md  2026-04-16-manual-segment-validation-and-refresh.md  2026-04-16-network-diagnostics.md  2026-04-16-network-segment-coverage.md  2026-04-16-refresh-failure-and-no-change.md  2026-04-16-refresh-history-clear.md  2026-04-16-refresh-history-collapse.md  2026-04-16-refresh-history-details.md  2026-04-16-refresh-history-filter.md  (+51 more)
scripts/: gcc-linker-wrapper.cmd  gcc-linker-wrapper.mjs  package-portable.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  discovery.rs  display_runtime.rs  file_transfer.rs  lib.rs  main.rs  message_runtime.rs  message_server.rs  message_store.rs  models.rs  protocol.rs  runtime.rs  settings_store.rs
src-tauri/tests/: commands_tests.rs  discovery_tests.rs  file_transfer_tests.rs  message_runtime_tests.rs  message_store_tests.rs  message_tests.rs  protocol_tests.rs  settings_store_tests.rs
src/app/: store.ts
src/desktop/: api.ts  types.ts
src/styles/: app.css
src/test/: app-shell.test.tsx  delivery-selection.test.ts  network-diagnostics.test.ts
(+18 files in other folders)
