[package]
name = "feiq-lan-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 当前桌面 MVP 只需要 Rust library 供 Tauri 调用。
# 在 windows-gnu 工具链下收敛 crate-type，避免模板默认的多目标链接问题。
name = "feiq_lan_tool_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

